[project]
name = "blt-byte-chatbot"
version = "0.1.0"
description = "BLT AI Chatbot - Python AI worker powered by Cloudflare Workers AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "webtypy>=0.1.7",
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk"
]
